chore: Update app title and description in i18n properties file

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,18 @@
-appTitle=br.com.bioindica
-appDescription=UI5 Application br.com.bioindica
-btnText=Say Hello
+appTitle=Bioindica
+appDescription=Bioindica
+
+# LOGIN VIEW
+loginCardTitle=Login
+loginCardsubTitle=Please enter your credentials
+
+
+# FORM LOGIN - REGISTER
+formEmail=Email
+formPassword=Password
+formButtonLogin=Login
+formRegister=Register
+formForgotPassword=Forgot password?
+formRememberMe=Remember me
+formDontHaveAccount=Don't have an account?
+formCreateAccount=Create an account
+
