chore: Update i18n properties files with required field validation messages

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,7 +5,6 @@ appDescription=Bioindica
 loginCardTitle=Login
 loginCardsubTitle=Please enter your credentials
 
-
 # FORM LOGIN - REGISTER
 formEmail=Email
 formPassword=Password
@@ -13,6 +12,13 @@ formButtonLogin=Login
 formRegister=Register
 formForgotPassword=Forgot password?
 formRememberMe=Remember me
+formThisFieldIsRequired=The field {0} is required
+formRequiredField=Required field
 formDontHaveAccount=Don't have an account?
 formCreateAccount=Create an account
+
+# ERROR STATES
+stateErrorLogin=Invalid email or password
+stateErrorInvalidEmail=Invalid email
+errorInvalidPassword=The password must have at least 8 characters, including letters, numbers and special characters.
 
