--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -15,3 +15,11 @@ formForgotPassword=Esqueceu a senha?
 formRememberMe=Lembrar de mim
 formDontHaveAccount=Não tem uma conta?
 formCreateAccount=Criar uma conta
+formRequiredField=Campo obrigat\u00f3rio
+formThisFieldIsRequired=O campo {0} \u00e9 obrigat\u00f3rio
+
+# ERROR STATES
+stateErrorLogin=Email ou senha inv\u00e1lidos
+stateErrorInvalidEmail=Email inv\u00e1lido
+errorInvalidPassword=A senha deve ter pelo menos 8 caracteres, incluindo letras, n\u00fameros e caracteres especiais.
+
