--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -12,13 +12,12 @@ formButtonLogin=Login
 formRegister=Register
 formForgotPassword=Forgot password?
 formRememberMe=Remember me
-formThisFieldIsRequired=The field {0} is required
-formRequiredField=Required field
+formThisFieldIsRequired=The field {0} is required.
 formDontHaveAccount=Don't have an account?
 formCreateAccount=Create an account
 
 # ERROR STATES
-stateErrorLogin=Invalid email or password
-stateErrorInvalidEmail=Invalid email
-errorInvalidPassword=The password must have at least 8 characters, including letters, numbers and special characters.
+stateErrorLogin=Invalid Email and/or Password.
+stateErrorInvalidEmail=Invalid email.
+stateErrorInvalidPassword=The password must have at least 8 characters, including letters, numbers and special characters.
 
