chore: Update i18n properties files with required field validation messages

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -21,3 +21,15 @@ stateErrorLogin=Invalid Email and/or Password.
 stateErrorInvalidEmail=Invalid email.
 stateErrorInvalidPassword=The password must have at least 8 characters, including letters, numbers and special characters.
 
+# HOME VIEW
+homeNewUser=New User
+homeFormName=Full Name
+homeFormNamePlaceHolder=Enter the user's name
+homeFormEmail=Email
+homeFormCPF=CPF
+homeFormPhone=Phone
+homeFormNewUserButton=Create User
+homeFormClear=Clear Form
+homeFormEmailPlaceHolder=Enter the user's email
+homeTableUsers=Users ({0})
+homeTableNoData=No User found
