--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -22,3 +22,16 @@ stateErrorLogin=Campos Email e/ou Senha inv\u00e1lidos.
 stateErrorInvalidEmail=Email inv\u00e1lido.
 stateErrorInvalidPassword=A senha deve ter pelo menos 8 caracteres, incluindo letras, n\u00fameros e caracteres especiais.
 
+# HOME VIEW
+homeNewUser=Novo Usu\u00e1rio
+homeFormName=Nome Completo
+homeFormNamePlaceHolder=Insira o nome do usu\u00e1rio
+homeFormEmail=Email
+homeFormEmailPlaceHolder=Insira o email do usu\u00e1rio
+homeFormCPF=CPF
+homeFormPhone=Telefone
+homeFormNewUserButton=Criar Usu\u00e1rio
+homeFormClear=Limpar Formul\u00e1rio
+homeTableUsers=Usu\u00e1rios ({0})
+homeTableNoData=Nenhum Usu\u00e1rio encontrado
+
