--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -1,6 +1,21 @@
 appTitle=Bioindica
 appDescription=Bioindica
 
+
+# PANEL CONFIGURATIONS
+lblThemeDark=Tema Escuro
+lblThemeLight=Tema Claro
+lblThemeSystem=Tema do Sistema
+lblTheme=Escolha um tema
+lblLanguageSystem=Idioma do Sistema
+lblLanguage=Escolha um idioma
+lblLanguagePortuguese=Portugu\u00EAs
+lblLanguageEnglish=Ingl\u00EAs
+titlePanelConfigurationsApp=Configura\u00E7\u00F5es
+btnSettingsSave=Salvar
+btnSettingsClose=Fechar
+
+
 # LOGIN VIEW
 loginCardTitle=Login
 loginCardsubTitle=Por favor, insira suas credenciais
@@ -34,4 +49,6 @@ homeFormNewUserButton=Criar Usu\u00e1rio
 homeFormClear=Limpar Formul\u00e1rio
 homeTableUsers=Usu\u00e1rios ({0})
 homeTableNoData=Nenhum Usu\u00e1rio encontrado
-
+homeFormCpfPlaceholder=999.999.999-99
+homeFormPhonePlacheHolder=(99) 99999-9999
+homeButtonSettings=Configura\u00e7\u00f5es
