--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,19 @@
 appTitle=Bioindica
 appDescription=Bioindica
 
+# PANEL CONFIGURATIONS
+lblThemeDark=Dark Theme
+lblThemeLight=Light Theme
+lblThemeSystem=System Theme
+lblTheme=Choose a theme
+lblLanguageSystem=System Language
+lblLanguage=Choose a language
+lblLanguagePortuguese=Portuguese
+lblLanguageEnglish=English
+titlePanelConfigurationsApp=Configurations
+btnSettingsSave=Save
+btnSettingsClose=Close
+
 # LOGIN VIEW
 loginCardTitle=Login
 loginCardsubTitle=Please enter your credentials
@@ -30,6 +43,9 @@ homeFormCPF=CPF
 homeFormPhone=Phone
 homeFormNewUserButton=Create User
 homeFormClear=Clear Form
+homeFormCpfPlaceholder=999.999.999-99
 homeFormEmailPlaceHolder=Enter the user's email
 homeTableUsers=Users ({0})
 homeTableNoData=No User found
+homeFormPhonePlacheHolder=(99) 99999-9999
+homeButtonSettings=Settings
