Update i18n properties files with required field validation messages

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -45,7 +45,9 @@ homeFormNewUserButton=Create User
 homeFormClear=Clear Form
 homeFormCpfPlaceholder=999.999.999-99
 homeFormEmailPlaceHolder=Enter the user's email
-homeTableUsers=Users ({0})
+homeTableUsers=Users
 homeTableNoData=No User found
 homeFormPhonePlacheHolder=(99) 99999-9999
 homeButtonSettings=Settings
+homeButtonDelete=Delete User(s)
+homeButtonEdit=Edit User
