--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -47,8 +47,11 @@ homeFormCPF=CPF
 homeFormPhone=Telefone
 homeFormNewUserButton=Criar Usu\u00e1rio
 homeFormClear=Limpar Formul\u00e1rio
-homeTableUsers=Usu\u00e1rios ({0})
+homeTableUsers=Usu\u00e1rios
 homeTableNoData=Nenhum Usu\u00e1rio encontrado
 homeFormCpfPlaceholder=999.999.999-99
 homeFormPhonePlacheHolder=(99) 99999-9999
 homeButtonSettings=Configura\u00e7\u00f5es
+homeButtonDelete=Deletar Usu\u00e1rio(s)
+homeButtonEdit=Editar Usu\u00e1rio
+
