--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -54,4 +54,5 @@ homeFormPhonePlacheHolder=(99) 99999-9999
 homeButtonSettings=Configura\u00e7\u00f5es
 homeButtonDelete=Deletar Usu\u00e1rio(s)
 homeButtonEdit=Editar Usu\u00e1rio
-
+homeButtonSaveEdit=Salvar Edi\u00e7\u00f5es
+homeButtonCancelEdit=Cancelar
