chore: Update login form to call authentication service

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -29,10 +29,16 @@ formThisFieldIsRequired=The field {0} is required.
 formDontHaveAccount=Don't have an account?
 formCreateAccount=Create an account
 
+# SUCCESS STATES
+stateSuccessLogin=Login successful.
+
 # ERROR STATES
 stateErrorLogin=Invalid Email and/or Password.
 stateErrorInvalidEmail=Invalid email.
 stateErrorInvalidPassword=The password must have at least 8 characters, including letters, numbers and special characters.
+stateErrorCpfAlreadyRegistered=CPF already registered.
+stateErrorEmailAlreadyRegistered=Email already registered.
+stateErrorCpfAndEmailAlreadyRegistered=It was not possible to save the changes. CPF and/or Email already registered.
 
 # HOME VIEW
 homeNewUser=New User
