--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -15,11 +15,12 @@ titlePanelConfigurationsApp=Configura\u00E7\u00F5es
 btnSettingsSave=Salvar
 btnSettingsClose=Fechar
 
+# SUCCESS STATES
+stateSuccessLogin=Login efetuado com sucesso.
 
 # LOGIN VIEW
 loginCardTitle=Login
 loginCardsubTitle=Por favor, insira suas credenciais
-
 
 # FORM LOGIN - REGISTER
 formEmail=Email
@@ -36,6 +37,9 @@ formThisFieldIsRequired=O campo {0} \u00e9 obrigat\u00f3rio.
 stateErrorLogin=Campos Email e/ou Senha inv\u00e1lidos.
 stateErrorInvalidEmail=Email inv\u00e1lido.
 stateErrorInvalidPassword=A senha deve ter pelo menos 8 caracteres, incluindo letras, n\u00fameros e caracteres especiais.
+stateErrorCpfAlreadyRegistered=CPF j\u00e1 cadastrado.
+stateErrorEmailAlreadyRegistered=Email j\u00e1 cadastrado.
+stateErrorCpfAndEmailAlreadyRegistered=N\u00e3o foi poss\u00edvel salvar as altera\u00e7\u00f5es. CPF e/ou Email j\u00e1 cadastrados.
 
 # HOME VIEW
 homeNewUser=Novo Usu\u00e1rio
