--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -14,6 +14,7 @@ lblLanguageEnglish=Ingl\u00EAs
 titlePanelConfigurationsApp=Configura\u00E7\u00F5es
 btnSettingsSave=Salvar
 btnSettingsClose=Fechar
+homeButtonLogout=Sair
 
 # SUCCESS STATES
 stateSuccessLogin=Login efetuado com sucesso.
