--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -13,6 +13,7 @@ lblLanguageEnglish=English
 titlePanelConfigurationsApp=Configurations
 btnSettingsSave=Save
 btnSettingsClose=Close
+homeButtonLogout=Logout
 
 # LOGIN VIEW
 loginCardTitle=Login
